force-app/main/default/objects/Business_Intelligence_Order_Lines_fields__c/Business_Intelligence_Order_Lines_fields__c.object-meta.xml
<CustomObject>
    <description>A lookup object for use with Business Intelligence</description>
    <label>Business Intelligence Order Lines</label>
    <nameField>
        <label>Business Intelligence Order Lines fields</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Intelligence Order Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>