force-app/main/default/objects/Business_Intelligence_Order_Lines_fields__c/fields/Engineering_Item_Master__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Item_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of Engineering Item Master</description>
    <label>Engineering Item Master</label>
    <referenceTo>rstk__peitem__c</referenceTo>
    <relationshipLabel>Business Intelligence Order Lines</relationshipLabel>
    <relationshipName>Business_Intelligence_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>