force-app/main/default/objects/Business_Intelligence_Order_Lines_fields__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup of order number in Orders</description>
    <label>Order Number</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Business Intelligence Order Lines</relationshipLabel>
    <relationshipName>Business_Intelligence_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>