force-app/main/default/objects/Business_Intelligence_Order_Lines_fields__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup of Order Product</description>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Business Intelligence Order Lines</relationshipLabel>
    <relationshipName>Business_Intelligence_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>